--- a/index.html
+++ b/index.html
@@ -232,6 +232,16 @@
     <!-- BEST SELLERS -->
     <section class="bestseller">
         <h1>BEST SELLERS</h1>
+        <div class="video">
+        <!--<video  controls>
+            <source src="https://youtu.be/-GNN7WGu4rU" type="video/mp4">
+            <source src="video.webm" type="video/webm">
+            Your browser does not support the video tag.
+          </video>-->
+          <iframe src="https://www.youtube.com/embed/jwC061bKG2Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" >
+
+          </iframe>
+        </div>
     </section>
  <!-- footer -->
     <footer >
