tasli7 les logos

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
     <ul class="brands brands-col">
         <li  class="btn btn-open"><a><img src="./img/brand/aud.png" alt=""></a></li>
         <li class="btn10 btn-open10"><a><img src="./img/brand/Bm.png" alt=""></a></li>
-        <li class="btn11 btn-open11"><a><img src="./img/brand/landrover.png" alt=""></a></li>
+        <li class="btn11 btn-open11"><a><img src="./img/brand/mercedes.png" alt=""></a></li>
         <li class="btn12 btn-open12"><a><img src="./img/brand/porshe.png" alt=""></a></li>
         <li class="btn13 btn-open13"><a><img src="./img/brand/seat.png" alt=""></a></li>
         <li class="btn14 btn-open14"><a><img src="./img/brand/polo.png" alt=""></a></li>
